--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "author": "Surjith S M",
   "license": "ISC",
   "dependencies": {
-    "@headlessui/react": "^2.0.3",
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.3",
-    "next": "14.2.3",
+    "latest": "^0.2.0",
+    "next": "^15.1.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
