--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.3",
     "latest": "^0.2.0",
+    "motion": "^11.17.0",
     "next": "^15.1.4",
     "next-themes": "^0.3.0",
     "react": "^18",
